@@ -11,6 +11,7 @@
   * Add H#merge
   * Add H#update
   * Add Enumerable#clear
+  * Add Enumerable#index
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
